--- a/app/views/manage/questionnaire-has/v2/site-access/neighbours-land.html
+++ b/app/views/manage/questionnaire-has/v2/site-access/neighbours-land.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Could a neighbouring site be affected?' %}
+{% set title = 'Do the plans affect a neighbouring site?' %}
 
 <!-- Will the reasons for refusal / grounds of appeal require the Inspector to access a neighbour’s land? -->
 
