--- a/app/views/manage/questionnaire-has/v2/constraints/affected-listed-building-check.html
+++ b/app/views/manage/questionnaire-has/v2/constraints/affected-listed-building-check.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Could the plans affect the setting of a listed building or site?' %}
+{% set title = 'Do the plans affect the setting of a listed building or site?' %}
 
 {% block questions %}
   {{ govukRadios({
