--- a/app/views/manage/questionnaire-has/v2/constraints/appropriate.html
+++ b/app/views/manage/questionnaire-has/v2/constraints/appropriate.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Do you think the householder appeal type is appropriate for this appeal?' %}
+{% set title = 'Do you think the appeal type is appropriate?' %}
 
 {% block questions %}
   {{ govukRadios({
