--- a/app/views/manage/questionnaire-has/v2/constraints/conservation-upload.html
+++ b/app/views/manage/questionnaire-has/v2/constraints/conservation-upload.html
@@ -8,7 +8,7 @@
   </h1>
 
   <p class="govuk-body">
-    <a href="https://magic.defra.gov.uk/magicmap.aspx" class="govuk-link">Link to magic maps</a>
+    <a href="https://magic.defra.gov.uk/magicmap.aspx" target="_blank" class="govuk-link">Link to Magic Maps (opens in new tab)</a>
   </p>
 
   {% set uploadHtml %}
