--- a/app/views/manage/questionnaire-has/v2/site-access/health-and-safety.html
+++ b/app/views/manage/questionnaire-has/v2/site-access/health-and-safety.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Does the site have potential safety risks?' %}
+{% set title = 'Add potential safety risks' %}
 
 {% block questions %}
 
@@ -51,7 +51,7 @@
     name: 'health-and-safety',
     fieldset: {
       legend: {
-        html: 'Do you want to add any potential safety issues?',
+        html: 'Are there any potential safety risks?',
         classes: 'govuk-fieldset__legend--m'
       }
     },
