HAS LPAQ task list shortcuts to complete sections, counting sections and submit

--- a/app/views/manage/access/v2/enter-code.html
+++ b/app/views/manage/access/v2/enter-code.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set serviceName = "Manage your planning inspectorate appeals" %}
+{% set serviceName = "Manage my appeals" %}
 {% set nav = true %}
 
 {% set title = "Enter your code" %}
