--- a/app/views/manage/access/v2/access-email.html
+++ b/app/views/manage/access/v2/access-email.html
@@ -1,5 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
+{% set serviceName = "Manage my appeals" %}
 {% set title = 'Enter your email address' %}
 
 {% set prototypeLinks = [
