--- a/app/views/manage/appeals/index.html
+++ b/app/views/manage/appeals/index.html
@@ -23,6 +23,30 @@
 
     <section class="govuk-!-margin-bottom-6">
 
+      {% set version = "4" %}
+      <h2 class="govuk-heading-m">
+        Version {{version}}
+        {{ govukTag({
+          classes: 'govuk-tag--yellow govuk-!-margin-left-2',
+          text: 'In progress'
+        }) }}
+      </h2>
+
+      <p class="govuk-!-margin-bottom-2">Changes:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>new tab for submitted appeals</li>
+      </ul>
+
+      {{ govukButton({
+        html: 'View prototype',
+        href: 'v'+version+'/?action=',
+        isStartButton: true
+      }) }}
+
+    </section>
+
+    <section class="govuk-!-margin-bottom-6">
+
       {% set version = "3" %}
       <h2 class="govuk-heading-m">
         Version {{version}}
