HAS questionnaire journey for LPAs

--- a/app/views/_includes/appeal-content/lpa-has-appeal-meta.html
+++ b/app/views/_includes/appeal-content/lpa-has-appeal-meta.html
@@ -27,7 +27,15 @@
       Appeal site
     </dt>
     <dd class="govuk-summary-list__value">
-      21 Cheers Drive, Speedwell, Bristol BS5 7FQ
+      2 Aubrey House, Aubrey Road, BS3 3EX
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Applicant
+    </dt>
+    <dd class="govuk-summary-list__value">
+      Rachel Silver
     </dd>
   </div>
   <div class="govuk-summary-list__row">
@@ -35,7 +43,7 @@
       Application number
     </dt>
     <dd class="govuk-summary-list__value">
-      21/04125/FUL
+      23/04125/FUL
     </dd>
   </div>
 </dl>
