--- a/app/views/patterns/index.html
+++ b/app/views/patterns/index.html
@@ -38,7 +38,8 @@
       <li><a href="file-upload/file-upload">H1 scale</a></li> -->
       <li><a href="input/name">name input</a></li>
       <li><a href="input/address">address input</a></li>
-      <li><a href="file-upload/file-upload">file upload</a></li>
+      <li><a href="file-upload/single-file-upload">single-file upload</a></li>
+      <li><a href="file-upload/multi-file-upload">multi-file upload</a></li>
       <li><a href="file-upload/documents-check">check for file upload</a></li>
     </ul>
 
