--- a/app/views/manage/emails/index.html
+++ b/app/views/manage/emails/index.html
@@ -25,13 +25,16 @@
     <h2 class="govuk-heading-m">
       Version {{version}}
       {{ govukTag({
-        classes: 'govuk-tag--yellow govuk-!-margin-left-2',
-        text: 'In progress'
+        classes: 'govuk-tag--blue govuk-!-margin-left-2',
+        text: 'Researched'
       }) }}
     </h2>
 
-    <p class="govuk-!-margin-bottom-2">
-
+    <p>
+      Researched October 2022<br>
+      <a href="https://pins-ds.atlassian.net/wiki/spaces/AAPDS/pages/1056768031" class="govuk-link">
+        Confluence user research notes
+      </a>
     </p>
 
     <ul class="govuk-list govuk-list--bullet">
