--- a/app/views/_includes/appeal-content/lpa-table-has-submission.html
+++ b/app/views/_includes/appeal-content/lpa-table-has-submission.html
@@ -2,7 +2,7 @@
 
 
 <dl class="govuk-summary-list">
-  <h2 class="govuk-heading-m">
+  <h2 class="govuk-heading-l">
     Appeal submission
   </h2>
 
