--- a/app/views/manage/appeals/index.html
+++ b/app/views/manage/appeals/index.html
@@ -27,8 +27,8 @@
       <h2 class="govuk-heading-m">
         Version {{version}}
         {{ govukTag({
-          classes: 'govuk-tag--yellow govuk-!-margin-left-2',
-          text: 'In progress'
+          classes: 'govuk-tag--green govuk-!-margin-left-2',
+          text: 'Ready for research'
         }) }}
       </h2>
 
@@ -45,16 +45,16 @@
 
     </section>
 
-    <section class="govuk-!-margin-bottom-6">
+    {% set v3HTML %}
 
       {% set version = "3" %}
-      <h2 class="govuk-heading-m">
-        Version {{version}}
-        {{ govukTag({
-          classes: 'govuk-tag--green govuk-!-margin-left-2',
-          text: 'Ready for research'
-        }) }}
-      </h2>
+
+      <p>
+        Researched January 2023<br>
+        <a href="https://pins-ds.atlassian.net/wiki/spaces/AAPDS/pages/1088356353" class="govuk-link">
+          Confluence user research notes
+        </a>
+      </p>
 
       <p class="govuk-!-margin-bottom-2">Changes:</p>
       <ul class="govuk-list govuk-list--bullet">
@@ -72,44 +72,66 @@
         isStartButton: true
       }) }}
 
-    </section>
+    {% endset -%}
 
-    <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
+    {% set v2HTML %}
 
-    {% set version = "2" %}
-    <h2 class="govuk-heading-m">
-      Version {{version}}
-      {{ govukTag({
-        classes: 'govuk-tag--green govuk-!-margin-left-2',
-        text: 'Researched'
+      {% set version = "2" %}
+
+      <p>
+        Researched December 2022<br>
+        <a href="https://pins-ds.atlassian.net/wiki/spaces/AAPDS/pages/1074954255/Uganda+Usability+Testing+-+Discussion+guide+draft" class="govuk-link">
+          Discussion guide for research
+        </a><br>
+        <a href="https://miro.com/app/board/uXjVP-SH1uo=/" class="govuk-link">
+          Miro board for UR feedback
+        </a>
+      </p>
+
+      <p class="govuk-!-margin-bottom-2">Changes:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>moved the work to the new prototype (<a href="https://pins-appeals.herokuapp.com/lpa/v1/no-appeals" class="govuk-link govuk-link--no-visited-state" title="Link to version 1">see version 1</a>)</li>
+        <li>changed to one link per task</li>
+        <li>appeal statement link not shown till questionnaire is done</li>
+        <li>completed questionnaire drops to the foot of the list with statement action</li>
+        <li>completed final comments appeal in the 2nd row disappears</li>
+        <li>completed statetment appeal in the 5th row disappears</li>
+      </ul>
+
+      {{ govukButton({
+        html: 'View prototype',
+        href: 'v'+version+'/',
+        classes: "govuk-button--secondary",
+        isStartButton: false
       }) }}
-    </h2>
 
-    <p class="govuk-!-margin-bottom-2">
-      <a href="https://pins-ds.atlassian.net/wiki/spaces/AAPDS/pages/1074954255/Uganda+Usability+Testing+-+Discussion+guide+draft" class="govuk-link">
-        Discussion guide for research
-      </a><br>
-      <a href="https://miro.com/app/board/uXjVP-SH1uo=/" class="govuk-link">
-        Miro board for UR feedback
-      </a>
-    </p>
+    {% endset -%}
 
-    <p class="govuk-!-margin-bottom-2">Changes:</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>moved the work to the new prototype (<a href="https://pins-appeals.herokuapp.com/lpa/v1/no-appeals" class="govuk-link govuk-link--no-visited-state" title="Link to version 1">see version 1</a>)</li>
-      <li>changed to one link per task</li>
-      <li>appeal statement link not shown till questionnaire is done</li>
-      <li>completed questionnaire drops to the foot of the list with statement action</li>
-      <li>completed final comments appeal in the 2nd row disappears</li>
-      <li>completed statetment appeal in the 5th row disappears</li>
-    </ul>
+    {{ govukAccordion({
+      id: 'previous',
+      classes: 'govuk-!-margin-top-9',
+      items: [
 
-    {{ govukButton({
-      html: 'View prototype',
-      href: 'v'+version+'/',
-      classes: "govuk-button--secondary",
-      isStartButton: false
+        {
+          heading: {
+            html: 'Version 3 <strong class="govuk-tag govuk-tag--blue govuk-!-margin-left-2">Researched</strong>'
+          },
+          content: {
+            html: v3HTML
+          }
+        },
+        {
+          heading: {
+            html: 'Version 2 <strong class="govuk-tag govuk-tag--blue govuk-!-margin-left-2">Researched</strong>'
+          },
+          content: {
+            html: v2HTML
+          }
+        }
+      ]
     }) }}
+
+
 
     {% set lpaForm %}
       <form method="get" action="v{{version}}/">
