--- a/app/views/manage/appeals/v4/appeal-details.html
+++ b/app/views/manage/appeals/v4/appeal-details.html
@@ -22,6 +22,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+    {% if data['questionnaire'] != 'complete' %}
     <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
       <div class="govuk-notification-banner__header">
         <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
@@ -39,6 +40,7 @@
         </p>
       </div>
     </div>
+    {% endif %}
 
     <h1 class="govuk-heading-l">
       Appeal {{ data['appealCode'] or '1345264' }}
@@ -52,6 +54,10 @@
   </div>
 
   <div class="govuk-grid-column-two-thirds">
+    {% if data['questionnaire'] == 'complete' %}
+      {% include "_includes/questionnaire-content/lpa-table-has-questionnaire.html" %}
+    {% endif %}
+
     <!-- <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible"> -->
     {% include "_includes/appeal-content/lpa-table-has-submission.html" %}
   </div>
