--- a/app/views/manage/manage-users/index.html
+++ b/app/views/manage/manage-users/index.html
@@ -41,27 +41,51 @@
       isStartButton: true
     }) }}
 
-    {% set version = "2" %}
-    <h2 class="govuk-heading-m">
-      Version {{version}}
-      {{ govukTag({
-        classes: 'govuk-tag--green govuk-!-margin-left-2',
-        text: 'Researched'
+    {% set v2HTML %}
+
+      {% set version = "2" %}
+
+      <p>
+        Researched October 2022<br>
+        <a href="https://pins-ds.atlassian.net/wiki/spaces/AAPDS/pages/1056768031" class="govuk-link">
+          Confluence user research notes
+        </a>
+      </p>
+
+      <p class="govuk-!-margin-bottom-2">Changes:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>Moved version 2 of this here (<a href="https://pins-appeals.herokuapp.com/lpa/v1/access?action=" class="govuk-link govuk-link--no-visited-state" title="Link to version 1">see version 1</a>)</li>
+        <li>Now you can add more than one person</li>
+        <li>Small UI update</li>
+      </ul>
+
+      {{ govukButton({
+        html: 'View prototype',
+        href: 'v'+version+'/',
+        isStartButton: true
       }) }}
-    </h2>
 
-    <p class="govuk-!-margin-bottom-2">Changes:</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>Moved version 2 of this here (<a href="https://pins-appeals.herokuapp.com/lpa/v1/access?action=" class="govuk-link govuk-link--no-visited-state" title="Link to version 1">see version 1</a>)</li>
-      <li>Now you can add more than one person</li>
-      <li>Small UI update</li>
-    </ul>
+    {% endset -%}
 
-    {{ govukButton({
-      html: 'View prototype',
-      href: 'v'+version+'/',
-      isStartButton: true
+
+    {{ govukAccordion({
+      id: 'previous',
+      classes: 'govuk-!-margin-top-9',
+      items: [
+
+        {
+          heading: {
+            html: 'Version 2 <strong class="govuk-tag govuk-tag--blue govuk-!-margin-left-2">Researched</strong>'
+          },
+          content: {
+            html: v2HTML
+          }
+        }
+      ]
     }) }}
+
+
+
 
     {% set lpaForm %}
       <form method="get" action="v{{version}}/">
