--- a/app/views/manage/questionnaire-has/index.html
+++ b/app/views/manage/questionnaire-has/index.html
@@ -26,8 +26,8 @@
       <h2 class="govuk-heading-m">
         Version {{version}}
         {{ govukTag({
-          classes: 'govuk-tag--yellow govuk-!-margin-left-2',
-          text: 'In progress'
+          classes: 'govuk-tag--green govuk-!-margin-left-2',
+          text: 'Ready for research'
         }) }}
       </h2>
 
@@ -46,26 +46,39 @@
 
     </section>
 
-    {% set version = "1" %}
-    <h2 class="govuk-heading-m">
-      Version {{version}}
-      {{ govukTag({
-        classes: 'govuk-tag--yellow govuk-!-margin-left-2',
-        text: 'In progress'
+    {% set v1HTML %}
+
+      {% set version = "1" %}
+
+      <!-- <p class="govuk-!-margin-bottom-2">Changes:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          (updates since the last version)
+        </li>
+      </ul> -->
+
+      {{ govukButton({
+        html: 'View prototype',
+        href: 'v'+version+'/task-list',
+        isStartButton: true
       }) }}
-    </h2>
 
-    <!-- <p class="govuk-!-margin-bottom-2">Changes:</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>
-        (updates since the last version)
-      </li>
-    </ul> -->
+    {% endset -%}
 
-    {{ govukButton({
-      html: 'View prototype',
-      href: 'v'+version+'/task-list',
-      isStartButton: true
+    {{ govukAccordion({
+      id: 'previous',
+      classes: 'govuk-!-margin-top-9',
+      items: [
+
+        {
+          heading: {
+            html: 'Version 1 <strong class="govuk-tag govuk-tag--yellow govuk-!-margin-left-2">In progress</strong>'
+          },
+          content: {
+            html: v1HTML
+          }
+        }
+      ]
     }) }}
 
   </div>
