--- a/app/views/manage/questionnaire/index.html
+++ b/app/views/manage/questionnaire/index.html
@@ -43,63 +43,59 @@
       isStartButton: true
     }) }}
 
+    {% set v12HTML %}
 
-    {% set version = "12" %}
-    <h2 class="govuk-heading-m">
-      Version {{version}}
-      {{ govukTag({
-        classes: 'govuk-tag--green govuk-!-margin-left-2',
-        text: 'Ready for research'
+      {% set version = "12" %}
+
+      <p class="govuk-!-margin-bottom-2">Changes:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          changes to listed building questions to ask for Historic England list entry numbers
+        </li>
+        <li>
+          updated ‘ancient’ monument to ‘scheduled’ monument
+        </li>
+      </ul>
+
+      {{ govukButton({
+        html: 'View prototype',
+        href: 'v'+version+'/task-list',
+        isStartButton: true
       }) }}
-    </h2>
 
-    <p class="govuk-!-margin-bottom-2">Changes:</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>
-        changes to listed building questions to ask for Historic England list entry numbers
-      </li>
-      <li>
-        updated ‘ancient’ monument to ‘scheduled’ monument
-      </li>
-    </ul>
+    {% endset -%}
 
-    {{ govukButton({
-      html: 'View prototype',
-      href: 'v'+version+'/task-list',
-      isStartButton: true
-    }) }}
+    {% set v11HTML %}
 
-    {% set version = "11" %}
-    <h2 class="govuk-heading-m">
-      Version {{version}}
-      {{ govukTag({
-        classes: 'govuk-tag--green govuk-!-margin-left-2',
-        text: 'Ready for research'
+      {% set version = "11" %}
+
+      <p class="govuk-!-margin-bottom-2">Changes:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>minor content updates</li>
+      </ul>
+
+      {{ govukButton({
+        html: 'View prototype',
+        href: 'v'+version+'/task-list',
+        isStartButton: true
       }) }}
-    </h2>
 
-    <p class="govuk-!-margin-bottom-2">Changes:</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>minor content updates</li>
-    </ul>
-
-    {{ govukButton({
-      html: 'View prototype',
-      href: 'v'+version+'/task-list',
-      isStartButton: true
-    }) }}
-
-    <p class="govuk-!-margin-bottom-2">Jump to:</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li><a href="v{{version}}/task-list?non-determination=false">task list (regular)</a></li>
-      <li><a href="v{{version}}/task-list?non-determination=true">task list (non-determination)</a></li>
-      <li><a href="v{{version}}/confirmation">confirmation</a></li>
-    </ul>
-
+      <p class="govuk-!-margin-bottom-2">Jump to:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="v{{version}}/task-list?non-determination=false">task list (regular)</a></li>
+        <li><a href="v{{version}}/task-list?non-determination=true">task list (non-determination)</a></li>
+        <li><a href="v{{version}}/confirmation">confirmation</a></li>
+      </ul>
+    {% endset -%}
 
     {% set v10HTML %}
       {% set version = "10" %}
-      <p class="govuk-body"><a href="https://miro.com/app/board/uXjVPJrQJJo=/">View the research outputs on Miro</a>.</p>
+      <p class="govuk-body">
+        Researched October 2022<br>
+        <a href="https://miro.com/app/board/uXjVPJrQJJo=/">
+          View the research outputs on Miro
+        </a>.
+      </p>
 
       <p class="govuk-!-margin-bottom-2">Changes:</p>
       <ul class="govuk-list govuk-list--bullet">
@@ -125,6 +121,22 @@
       id: 'previous',
       classes: 'govuk-!-margin-top-9',
       items: [
+        {
+          heading: {
+            html: 'Version 12 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Ready for research</strong>'
+          },
+          content: {
+            html: v12HTML
+          }
+        },
+        {
+          heading: {
+            html: 'Version 11 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Ready for research</strong>'
+          },
+          content: {
+            html: v11HTML
+          }
+        },
         {
           heading: {
             html: 'Version 10 <strong class="govuk-tag govuk-tag--blue govuk-!-margin-left-2">Researched</strong>'
