--- a/app/views/manage/statement/index.html
+++ b/app/views/manage/statement/index.html
@@ -25,10 +25,17 @@
     <h2 class="govuk-heading-m">
       Version {{version}}
       {{ govukTag({
-        classes: 'govuk-tag--yellow govuk-!-margin-left-2',
-        text: 'In progress'
+        classes: 'govuk-tag--blue govuk-!-margin-left-2',
+        text: 'Researched'
       }) }}
     </h2>
+
+    <p>
+      Researched November 2022<br>
+      <a href="https://pins-ds.atlassian.net/wiki/spaces/AAPDS/pages/1066336287" class="govuk-link">
+        Confluence user research notes
+      </a>
+    </p>
 
     <!-- <p class="govuk-!-margin-bottom-2">Changes:</p>
     <ul class="govuk-list govuk-list--bullet">
